--- a/public/s/view.html
+++ b/public/s/view.html
@@ -1,21 +1,15 @@
-﻿<!DOCTYPE html>
-<head>
-<!--<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />-->
-<meta charset="utf-8" />
-<title>查看空间页面</title>
+﻿
 <!-- css -->
-</head>
 
-<body>
 
-<h1>查看空间页面</h1>
-<p>空间标识：<span id="key"></span></p>
-<p>二维码：<span id="qrcode"></span></p>
-
+<div id="main-wrapper">
+	<h1>查看空间页面</h1>
+	<p>空间标识：<span id="key"></span></p>
+	<p>二维码：<span id="qrcode"></span></p>
+</div>
 
 
 <!-- js -->
-<script src="../lib/js/jquery.min.js"></script>
 <script src="../lib/js/jquery.qrcode.min.js"></script>
 <script>
 //$.get('/do/s/view', function(resObj) {
@@ -29,5 +23,3 @@
 	});
 //});
 </script>
-</body>
-</html>
