--- a/public/s/enter.html
+++ b/public/s/enter.html
@@ -1,30 +1,20 @@
-﻿<!DOCTYPE html>
-<head>
-<!--<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />-->
-<meta charset="utf-8" />
-<title>进入页面</title>
+﻿
 <!-- css -->
-</head>
 
-<body>
-
-
-<p>欢迎使用演讲家</p>
-
-
-<form>
-演讲ID: 
-<input type="text" />
-<br />
-密码: 
-<input type="password" />
-<br />
-  <input type="button" value="进入空间">
-</form>
-
+<div id="main-wrapper">
+	<p>欢迎使用演讲家</p>
+	
+	<form>
+	演讲ID: 
+	<input type="text" />
+	<br />
+	密码: 
+	<input type="password" />
+	<br />
+		<input type="button" value="进入空间">
+	</form>
+</div>
 
 
 
 <!-- js -->
-</body>
-</html>
