--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,27 @@
 		<meta charset="utf-8" />
 		<link rel="stylesheet" href="/lib/css/bootstrap.min.css" />
 		<link rel="stylesheet" href="/lib/css/bootstrap-theme.min.css" />
+		<link rel="stylesheet" href="/lib/css/font-awesome.min.css" />
+		<link rel="stylesheet" href="/lib/css/buttons.css" />
 		<link rel="stylesheet" href="/lib/css/style.css" />
 	</head>
 	<body>
-		<div id="main-frame"></div>
+		<div id="body-wrapper">
+			<header>
+				<a href="/s/open.html" class="button button-rounded button-flat-primary button-large">申请</a>
+				<a href="/s/enter.html" class="button button-rounded button-flat-primary button-large">进入</a>
+				<a href="/s/view.html" class="button button-rounded button-flat-primary button-large">管理</a>
+				<a href="/a/join.html" class="button button-rounded button-flat-primary button-large">加入</a>
+				<a href="/a/view.html" class="button button-rounded button-flat-primary button-large">查看</a>
+			</header>
+			<div id="main-frame" class="container"></div>
+			<footer>
+				
+			</footer>
+		</div>
 		
 		<script src="/lib/js/jquery.min.js"></script>
 		<script src="/lib/js/bootstrap.min.js"></script>
-		<script>
-			
-		</script>
+		<script src="/lib/js/script.js"></script>
 	</body>
 </html>
