--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 	<head>
 		<title>演讲家App</title>
@@ -45,6 +45,8 @@
 		
 		<script src="/lib/js/jquery.min.js"></script>
 		<script src="/lib/js/bootstrap.min.js"></script>
+		<script src="/lib/js/jquery.serializeJSON.min.js"></script>
+		<script src="/lib/js/ajax-form.js"></script>
 		<script src="/lib/js/script.js"></script>
 	</body>
 </html>
