--- a/public/a/view.html
+++ b/public/a/view.html
@@ -1,21 +1,19 @@
-<!DOCTYPE html>
-<head>
-<!--<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />-->
-<meta charset="utf-8" />
-<title>进入页面</title>
+﻿
 <!-- css -->
-</head>
-
-<body>
 
 
-<form name="input" action="html_form_action.asp" method="get">
-请输入你想说的话：
-<input type="text" name="user" />
-<input type="submit" value="发送消息" />
-</form
+<div id="main-wrapper" xmlns="http://www.w3.org/1999/html">
 
 
+<form action="/do/a/view" method="post">
+
+
+请输入你想说的话
+
+    <input type="text" name="user" />
+
+    <button type="submit" class="btn btn-default">发送信息</button>
+    
+</form></div>
 <!-- js -->
-</body>
-</html>
+
