--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,8 @@
 
 			<div id="main-frame" class="container"></div>
 		</div>
-		
+
+        <script src="/lib/js/underscore-min.js"></script>
 		<script src="/lib/js/jquery.min.js"></script>
 		<script src="/lib/js/bootstrap.min.js"></script>
 		<script src="/lib/js/jquery.serializeJSON.min.js"></script>
