--- a/public/s/enter.html
+++ b/public/s/enter.html
@@ -2,19 +2,23 @@
 <!-- css -->
 
 <div id="main-wrapper">
-	<p>欢迎使用演讲家</p>
+	<h1>欢迎使用演讲家</h1>
 	
 	<form>
-	演讲ID: 
-	<input type="text" />
-	<br />
-	密码: 
-	<input type="password" />
-	<br />
-		<input type="button" value="进入空间">
-	</form>
+        <form role="form">
+            <div class="form-group">
+                <input type="text" class="form-control" placeholder="演讲ID">
+            </div>
+            <div class="form-group">
+                <input type="password" class="form-control" placeholder="密码">
+            </div>
+
+
+            <button type="submit" class="btn btn-default">进入空间</button>
+            </form>
+    </form>
 </div>
 
-
-
 <!-- js -->
+
+
