--- a/public/s/view.html
+++ b/public/s/view.html
@@ -3,8 +3,8 @@
 
 
 <div id="main-wrapper">
-	<h1>查看空间页面</h1>
-	<p>空间标识：<span id="key"></span></p>
+	<h1>查看讲座</h1>
+	<p>讲座ID：<span id="key"></span></p>
 	<p>二维码：<span id="qrcode"></span></p>
 </div>
 
