--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
                 </nav>
             </div>
 
-			<div id="main-frame" class="container"></div>
+			<div id="frame" class="container"></div>
 		</div>
 
         <script src="/lib/js/underscore-min.js"></script>
