--- a/public/a/index.html
+++ b/public/a/index.html
@@ -20,18 +20,11 @@
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
                             </button>
-                            <a data-toggle="page" href="#/welcome" class="navbar-brand">演讲家App</a>
+                            <a href="#/welcome" class="navbar-brand">演讲家App</a>
                         </div>
 
                         <div class="collapse navbar-collapse" id="nav-collapse">
-                            <ul class="nav navbar-nav">
-                                <li class="active">
-                                    <a data-toggle="page" href="#/s/open">开辟讲座</a>
-                                </li>
-                                <li>
-                                    <a data-toggle="page" href="#/a/join">加入讲座</a>
-                                </li>
-                            </ul>
+                            <ul class="nav navbar-nav"></ul>
                         </div>
                     </div>
                 </nav>
