--- a/public/s/open.html
+++ b/public/s/open.html
@@ -5,25 +5,38 @@
 		width: 140px;
 		height: 40px;
 	}
+    #form-open input[name="valisum"] {
+        padding: 10px;
+        height: auto;
+        font-size: 20px;
+    }
+    #form-open [type="submit"] {
+        margin: auto;
+        width: 140px;
+    }
 </style>
 
 <div id="main-wrapper">
 	<h1>申请讲座</h1>
 
 	<form id="form-open">
-		<canvas id="canvas" width="70" height="20"></canvas><br />
-		<input type="text" name="valisum" placeholder="验证码">
-		<span class="button-wrap">
-			<a type="submit" class="button button-circle button-primary">创建</a>
-		</span>
+        <div class="form-group">
+            <canvas id="canvas" width="70" height="20"></canvas><br />
+        </div>
+		<div class="form-group">
+            <input type="text" class="form-control" name="valisum" placeholder="验证码">
+		</div>
+        <div type="submit">
+            <span class="button-wrap">
+                <a class="button button-circle button-primary">创建</a>
+            </span>
+        </div>
 	</form>
 
-	<form>
-	  <input type="password" placeholder="重置密码">
-	 <!-- <button type="submit" class="btn btn-danger btn-lg">提交</button>
-	</form>-->
-<button type="button" class="btn btn-primary btn-lg active">提交</button>
-</form>
+	<!--<form>
+	    <input type="password" placeholder="重置密码">
+        <button type="button" class="btn btn-primary btn-lg active">提交</button>
+    </form>-->
 </div>
 
 <!-- js -->
@@ -31,21 +44,22 @@
 <script>
 	showValicode();
 
-	$('#form-open').ajaxForm({
+    var $formOpen = $('#form-open');
+    $formOpen.ajaxForm({
 		type: 'post',
 		url: '/do/s/open',
 		success: function(resObj) {
 			var ok = resObj['ok'],
 				msg = resObj['msg'];
 			if (ok) {
-				loadFrame('#/s/view');
+				loadFrame('#/view');
 			} else {
 				alert(msg);
 				showValicode();
 			}
+            $formOpen[0].reset();
 		}
 	});
-
 
 	function showValicode() {
 		$.ajax({
