--- a/public/s/view.html
+++ b/public/s/view.html
@@ -10,7 +10,7 @@
 
 
 <!-- js -->
-<script src="../lib/js/jquery.qrcode.min.js"></script>
+<script src="/lib/js/jquery.qrcode.min.js"></script>
 <script>
 //$.get('/do/s/view', function(resObj) {
 	//var key = resObj['key'];
