--- a/public/s/open.html
+++ b/public/s/open.html
@@ -10,10 +10,6 @@
         height: auto;
         font-size: 20px;
     }
-    #form-open [type="submit"] {
-        margin: auto;
-        width: 140px;
-    }
 </style>
 
 <div id="main-wrapper">
@@ -26,11 +22,7 @@
 		<div class="form-group">
             <input type="text" class="form-control" name="valisum" placeholder="验证码">
 		</div>
-        <div type="submit">
-            <span class="button-wrap">
-                <a class="button button-circle button-primary">创建</a>
-            </span>
-        </div>
+        <button type="submit" class="btn btn-primary btn-lg btn-block">创建</button>
 	</form>
 
 	<!--<form>
