--- a/public/s/view.html
+++ b/public/s/view.html
@@ -7,7 +7,12 @@
 	<p>讲座ID：<span id="key"></span></p>
 	<p>二维码：<span id="qrcode"></span></p>
 </div>
-
+ <div>
+     <button href="#/reaction" class="btn btn-primary btn-lg btn-block">听众动态</button>
+     <button href="#/share" class="btn btn-primary btn-lg btn-block">共享文件</button>
+     <button href="#/***" class="btn btn-primary btn-lg btn-block">环节设置</button>
+     <button href="#/open" class="btn btn-primary btn-lg btn-block">退出空间</button>
+ </div>
 
 <!-- js -->
 <script src="/lib/js/jquery.qrcode.min.js"></script>
@@ -18,7 +23,7 @@
 	var key = 'asd2';
 	$('#key').text(key);
 	$('#qrcode').qrcode({
-		width: 64, height: 64,
+		width: 128, height: 128,
 		text: key
 	});
 //});
