--- a/public/s/view.html
+++ b/public/s/view.html
@@ -6,6 +6,9 @@
 	<h1>查看讲座</h1>
 	<p>讲座ID：<span id="key"></span></p>
 	<p>二维码：<span id="qrcode"></span></p>
+    <p>
+        <a href="#/share" > 文件共享 </a>
+    </p>
 </div>
 
 
