--- a/public/s/share.html
+++ b/public/s/share.html
@@ -22,10 +22,10 @@
     </table>
 
 
-    <form>
+    <form id="form-upload">
         <div class="form-group">
             <div class="input-group">
-                <input type="file" class="form-control">
+                <input type="file" class="form-control" name="file" />
             <span class="input-group-btn">
               <button type="submit" class="btn btn-primary">提交</button>
             </span>
@@ -43,9 +43,21 @@
 <script src="/lib/js/drawVerificationCode.js"></script>
 <script>
     var $table = $('#table-filelist'),
-            $tbody = $table.find('tbody');
+            $tbody = $table.find('tbody'),
+            $form = $('#form-upload');
 
     getFileList();
+
+    $form.on('submit', function(event) {
+       event.preventDefault();  // 禁止默认转页行为
+    }).find('[name="file"]').ajaxfileupload({
+        submit_button: $form.find('[type="submit"]'),
+        'action': '/do/s/savefile',
+        valid_extensions: ['doc', 'ppt', 'xls', 'txt'],
+        onComplete: function(res) {
+            console.log(res)
+        }
+    });
 
     function getFileList() {
         $tbody.empty();
