--- a/public/a/view.html
+++ b/public/a/view.html
@@ -2,7 +2,7 @@
 <!-- css -->
 
 
-<div id="main-wrapper" xmlns="http://www.w3.org/1999/html">
+<div id="main-wrapper">
 
 
 <form action="/do/a/view" method="post">
