--- a/public/s/open.html
+++ b/public/s/open.html
@@ -3,12 +3,21 @@
 <style>
 	#canvas {
 		width: 140px;
-		height: 40px;
+		height: 36px;
 	}
-    #form-open input[name="valisum"] {
-        padding: 10px;
+	#form-open * {
+		font-size: 20px;
+	}
+    #form-open .form-group {
+        margin-bottom: 5px;
+    }
+	#form-open .form-control {
+		padding: 12px;
+		height: auto;
+	}
+    #form-open button {
+        padding: 12px;
         height: auto;
-        font-size: 20px;
     }
 </style>
 
@@ -16,48 +25,49 @@
 	<h1>申请讲座</h1>
 
 	<form id="form-open">
+		<div class="form-group">
+			<input type="text" class="form-control" name="lname" placeholder="讲座名称">
+		</div>
         <div class="form-group">
-            <canvas id="canvas" width="70" height="20"></canvas><br />
+            <input type="text" class="form-control" name="lpwd" placeholder="讲座密码">
         </div>
 		<div class="form-group">
-            <input type="text" class="form-control" name="valisum" placeholder="输入图中的运算答案">
+			<div class="input-group">
+				<input type="text" class="form-control" name="vcode" placeholder="图中的运算答案">
+                <span class="input-group-addon">
+					<canvas id="canvas" width="70" height="18"></canvas>
+				</span>
+			</div>
 		</div>
+		<button type="submit" class="btn btn-primary btn-lg btn-block">
+			开启讲座
+		</button>
 	</form>
 
-	<!--<form>
-	    <input type="password" placeholder="重置密码">
-        <button type="button" class="btn btn-primary btn-lg active">提交</button>
-    </form>-->
-
-<button type="submit" class="btn btn-primary btn-lg btn-block" data-toggle="modal" data-target="#myModal">
-开启讲座
-</button>
 
 <!-- Modal -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title" id="myModalLabel">讲座信息</h4>
-            </div>
-            <div class="modal-body">
-               <div>
-
-
-                    <input type="password" class="form-control" placeholder="请输入密码">
-                </div>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
-                <button type="button" class="btn btn-primary">保存</button>
-            </div>
-        </div><!-- /.modal-content -->
-    </div><!-- /.modal-dialog -->
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+				<h4 class="modal-title" id="myModalLabel">讲座信息</h4>
+			</div>
+			<div class="modal-body">
+			   <div>
+					<input type="password" class="form-control" placeholder="请输入密码">
+				</div>
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+				<button type="button" class="btn btn-primary">保存</button>
+			</div>
+		</div><!-- /.modal-content -->
+	</div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
 
 
-
+</div>
 
 
 
@@ -66,36 +76,39 @@
 <script>
 	showValicode();
 
-    var $formOpen = $('#form-open');
-    $formOpen.ajaxForm({
+	var $formOpen = $('#form-open');
+	$formOpen.ajaxForm({
 		type: 'post',
 		url: '/do/s/open',
 		success: function(resObj) {
-			var ok = resObj['ok'],
-				msg = resObj['msg'];
-			if (ok) {
+			if (resObj['ok']) {
 				loadFrame('#/view');
 			} else {
-				alert(msg);
+				alert(resObj['msg']);
 				showValicode();
 			}
-            $formOpen[0].reset();
+			$formOpen[0].reset();
 		}
 	});
 
 	function showValicode() {
 		$.ajax({
 			type: 'get',
-			url: '/do/valicode',
+			url: '/do/vcode',
 			data: {
 				'action': 'open'
 			},
 			success: function(resObj) {
-				var num1 = resObj['num1'], num2 = resObj['num2'], oper = resObj['oper'];
+                if (! resObj['ok']) {
+                    alert('获取验证码失败');
+                    return;
+                }
+				var vcodeInfo = resObj['vcodeInfo'],
+                    num1 = vcodeInfo['num1'],
+					num2 = vcodeInfo['num2'],
+					oper = vcodeInfo['oper'];
 				drawVerificationCode(num1, num2, oper);
 			}
 		});
 	}
 </script>
-
-
