--- a/public/s/share.html
+++ b/public/s/share.html
@@ -2,8 +2,6 @@
 
 
 <div id="main-wrapper">
-
-
        <p>
             <a href="#/view" > back to index.</a>
        </p>
@@ -11,9 +9,8 @@
     <table id="table-filelist" class="table table-hover">
         <thead>
         <tr>
-            <th>文件名字</th>
+            <th>文件名</th>
             <th>文件大小</th>
-            <th>文件描述</th>
             <th>下载次数</th>
         </tr>
         </thead>
@@ -31,13 +28,7 @@
             </span>
             </div>
         </div>
-
-
     </form>
-
-
-
-
 </div>
 
 <script src="/lib/js/drawVerificationCode.js"></script>
@@ -53,9 +44,13 @@
     }).find('[name="file"]').ajaxfileupload({
         submit_button: $form.find('[type="submit"]'),
         'action': '/do/s/savefile',
-        valid_extensions: ['doc', 'ppt', 'xls', 'txt'],
-        onComplete: function(res) {
-            console.log(res)
+        valid_extensions: [
+            'doc', 'ppt', 'xls', 'txt',
+            'jpg', 'jpeg', 'png', 'bmp', 'gif'
+        ],
+        onComplete: function(resObj) {
+            // ok - 显示msg并清空
+            // ! ok 显示msg
         }
     });
 
@@ -66,13 +61,12 @@
             url: '/do/s/filelist',
             success: function(resObj) {
                 if (resObj['ok']) {
-                    var fileList = resObj['fileList'];
-                    _.each(fileList, function(val) {
+                    var files = resObj['files'];
+                    _.each(files, function(val) {
                         $([
                             '<tr>',
                             '<td>' + val['name'] + '</td>',
                             '<td>' + Math.ceil(val['size'] / 1024) + ' KB </td>',
-                            '<td>' + val['description'] + '</td>',
                             '<td>' + val['timesDown'] + '</td>',
                             '</tr>'
                         ].join('')).appendTo($tbody);
