--- a/public/a/join.html
+++ b/public/a/join.html
@@ -1,17 +1,33 @@
 ﻿
 <!-- css -->
-
+<style>
+    #canvas {
+        width: 140px;
+        height: 36px;
+    }
+    #form-join * {
+        font-size: 20px;
+    }
+    #form-join .form-group {
+        margin-bottom: 5px;
+    }
+    #form-join .form-control {
+        padding: 12px;
+        height: auto;
+    }
+    #form-join button {
+        padding: 12px;
+        height: auto;
+    }
+</style>
+        
 
 <div id="main-wrapper">
 
-
-
 <h1>欢迎使用演讲家</h1>
-
-
-<form method="post" action="/do/a/join">
-	<div class="row">
-   		<div class="col-sm-4 col-sm-offset-2">
+<form id="form-join" method="post" action="/do/a/join">
+	<div class="form-group">
+   		<div class="form-group">
         	<div class="form-group">
             	<input type="text" class="form-control" name="id" placeholder="演讲ID">
             </div>
@@ -21,7 +37,6 @@
         </div>
     </div>
 </form>
-
 
 </div>
 
