--- a/public/a/share.html
+++ b/public/a/share.html
@@ -50,7 +50,7 @@
                         $([
                             '<tr>',
                             '<td>',
-                                '<a class="ex-link" href="/a/downfile?fid='+ file['id'] +'">' + file['name'] + '</a>',
+                                '<a class="ex-link" href="/do/downfile?fid='+ file['id'] +'">' + file['name'] + '</a>',
                             '</td>',
                             '<td>' + Math.ceil(file['size'] / 1024) + ' KB </td>',
                             '<td>' + file['timesDown'] + '</td>',
