--- a/public/a/join.html
+++ b/public/a/join.html
@@ -29,10 +29,10 @@
 	<div class="form-group">
    		<div class="form-group">
         	<div class="form-group">
-            	<input type="text" class="form-control" name="id" placeholder="演讲ID">
+            	<input type="text" class="form-control" name="key" placeholder="讲座序列号">
             </div>
         	<div class="form-group">
-            	<button type="submit" class="btn btn-primary btn-block">进入空间</button>
+            	<button type="submit" class="btn btn-primary btn-block">加入讲座</button>
             </div>
         </div>
     </div>
@@ -44,8 +44,12 @@
 <script>
 $('#main-wrapper').find('form').ajaxForm({
 	success: function(resObj) {
-		var msg = resObj['msg'];
-		alert(msg);
+        var ok = resObj['ok'],
+                msg = resObj['msg'];
+        alert(msg);
+        if(ok){
+            loadFrame('#/view')
+        }
 	}
 });
 </script>
