--- a/public/a/share.html
+++ b/public/a/share.html
@@ -3,7 +3,7 @@
 
 <div id="main-wrapper">
        <p>
-            <a href="#/view" > back to index.</a>
+            <a href="#/view">返回主页</a>
        </p>
 
     <table id="table-filelist" class="table table-hover">
@@ -17,24 +17,12 @@
 
         <tbody></tbody>
     </table>
-
-    <form id="form-upload">
-        <div class="form-group">
-            <div class="input-group">
-                <input type="file" class="form-control" name="file" />
-            <span class="input-group-btn">
-              <button type="submit" class="btn btn-primary">提交</button>
-            </span>
-            </div>
-        </div>
-    </form>
 </div>
 
 <script src="/lib/js/drawVerificationCode.js"></script>
 <script>
     var $table = $('#table-filelist'),
-            $tbody = $table.find('tbody'),
-            $form = $('#form-upload');
+            $tbody = $table.find('tbody');
 
     getFileList();
 
@@ -49,11 +37,11 @@
                     _.each(files, function(file) {
                         $([
                             '<tr>',
-                            '<td>',
-                                '<a class="ex-link" href="/do/downfile?fid='+ file['id'] +'">' + file['name'] + '</a>',
-                            '</td>',
-                            '<td>' + Math.ceil(file['size'] / 1024) + ' KB </td>',
-                            '<td>' + file['timesDown'] + '</td>',
+                                '<td>',
+                                    '<a target="_blank" class="ex-link" href="/do/downfile?fid='+ file['id'] +'">' + file['name'] + '</a>',
+                                '</td>',
+                                '<td>' + Math.ceil(file['size'] / 1024) + ' KB </td>',
+                                '<td>' + file['timesDown'] + '</td>',
                             '</tr>'
                         ].join('')).appendTo($tbody);
                     });
