--- a/public/s/share.html
+++ b/public/s/share.html
@@ -3,7 +3,7 @@
 
 <div id="main-wrapper">
        <p>
-            <a href="#/view" > back to index.</a>
+            <a href="#/view"> back to index.</a>
        </p>
 
     <table id="table-filelist" class="table table-hover">
@@ -41,7 +41,7 @@
     getFileList();
 
     var validExts = [
-        'doc', 'docx', 'ppt', 'pptx' , 'xls', 'xlsx',
+        'doc', 'docx', 'ppt', 'pptx' , 'xls', 'xlsx', 'pdf',
         'txt', 'jpg', 'jpeg', 'png', 'bmp', 'gif'
     ], $form = $('#form-upload');
     $form.on('submit', function(event) {
