--- a/public/a/view.html
+++ b/public/a/view.html
@@ -3,17 +3,50 @@
 
 
 <div id="main-wrapper">
+    <div>
+        <h1>查看讲座</h1>
+        <p>
+            讲座序列号：<span id="key"></span>
+        </p>
+        <p>
+            二维码：<span id="qrcode"></span>
+        </p>
+        <p>
+            我的昵称：<span id="name"></span>
+        </p>
+    </div>
+    <div>
+        <button href="#/reaction" class="btn btn-primary btn-lg btn-block">听众动态</button>
+        <button href="#/share" class="btn btn-primary btn-lg btn-block">共享文件</button>
+        <button id="btn-exit" class="btn btn-primary btn-lg btn-block">退出空间</button>
+    </div>
+</div>
 
 
-<form action="/do/a/view" method="post">
 
-
-请输入你想说的话
-
-    <input type="text" name="user" />
-
-    <button type="submit" class="btn btn-default">发送信息</button>
-    
-</form></div>
 <!-- js -->
+<script>
+    var hostUrl = 'http://baidu.com';
 
+    $.get('/do/a/view', function(resObj) {
+        var lectkey = resObj['lectkey'],
+                lectname = resObj['lectname'],
+                audiname = resObj['audiname'];
+        $('#lectkey').text(lectkey);
+        $('#lectname').text(lectname);
+        $('#audiname').text(audiname);
+        $('#qrcode').qrcode({
+            width: 128, height: 128,
+            text: hostUrl + '/a/join?key=' + lectkey
+        });
+    });
+
+    $('#btn-exit').on('click', function() {
+        $.get('/do/a/exit', function(resObj) {
+            alert(resObj['msg'])
+            if (resObj['ok']) {
+                loadFrame('#/join');
+            }
+        });
+    });
+</script>
