--- a/public/s/index.html
+++ b/public/s/index.html
@@ -15,6 +15,7 @@
 		<script src="/lib/js/store.min.js"></script>
 		<script src="/lib/bootstrap/js/bootstrap.min.js"></script>
 		<script src="/lib/js/jquery.serializeJSON.min.js"></script>
+        <script src="/lib/js/jquery.qrcode.min.js"></script>
         <script src="/lib/js/jquery.ajaxfileupload.js"></script>
 		<script src="/lib/js/ajax-form.js"></script>
 		<script src="/lib/js/script.js"></script>
