--- a/public/s/view.html
+++ b/public/s/view.html
@@ -3,32 +3,43 @@
 
 
 <div id="main-wrapper">
-	<h1>查看讲座</h1>
-	<p>
-        讲座序列号：<span id="key"></span>
-    </p>
-	<p>
-        二维码：<span id="qrcode"></span>
-    </p>
+    <div>
+        <h1>查看讲座</h1>
+        <p>
+            讲座名称：<span id="lectname"></span>
+        </p>
+        <p>
+            讲座序列号：<span id="lectkey"></span>
+        </p>
+        <p>
+            二维码：<span id="qrcode"></span>
+        </p>
+        <p>
+            我的昵称：<span id="spkname"></span>
+        </p>
+    </div>
+    <div>
+         <button href="#/reaction" class="btn btn-primary btn-lg btn-block">听众动态</button>
+         <button href="#/share" class="btn btn-primary btn-lg btn-block">共享文件</button>
+         <button href="" class="btn btn-primary btn-lg btn-block">环节设置</button>
+         <button id="btn-close" class="btn btn-primary btn-lg btn-block">退出空间</button>
+    </div>
 </div>
- <div>
-     <button href="#/reaction" class="btn btn-primary btn-lg btn-block">听众动态</button>
-     <button href="#/share" class="btn btn-primary btn-lg btn-block">共享文件</button>
-     <button href="" class="btn btn-primary btn-lg btn-block">环节设置</button>
-     <button id="btn-close" class="btn btn-primary btn-lg btn-block">退出空间</button>
- </div>
 
 <!-- js -->
-<script src="/lib/js/jquery.qrcode.min.js"></script>
 <script>
     var hostUrl = 'http://baidu.com';
 
     $.get('/do/s/view', function(resObj) {
-        var key = resObj['key'];
-        $('#key').text(key);
+        var lectkey = resObj['lectkey'],
+            lectname = resObj['lectname'],
+            spkname = resObj['spkname'];
+        $('#lectkey').text(lectkey);
+        $('#lectname').text(lectname);
+        $('#spkname').text(spkname);
         $('#qrcode').qrcode({
             width: 128, height: 128,
-            text: hostUrl + '/a/join?key=' + key
+            text: hostUrl + '/a/join?key=' + lectkey
         });
     });
 
