--- a/public/a/reaction.html
+++ b/public/a/reaction.html
@@ -77,7 +77,7 @@
                         $([
                             '<tr>',
                             '<td>' + audience.name + '</td>',
-                            '<td>' + audience.timeOnline + '</td>',
+                            '<td>' + strTimeDiff(audience.jointime) + '</td>',
                             '</tr>'
                         ].join('')).appendTo($tbody);
                     });
@@ -100,9 +100,9 @@
                     _.each(msg, function(msg) {
                         $([
                             '<tr>',
-                                '<td>' + audience.name + '</td>',
-                                '<td>' + msg.speechContent + '</td>',
-                                '<td>' + msg.time + '</td>',
+                                '<td>' + msg.audienceName + '</td>',
+                                '<td>' + msg.text + '</td>',
+                                '<td>' + strTimeDiff(msg.sendtime) + '</td>',
                             '</tr>'
                         ].join('')).appendTo($tbody);
                     });
@@ -111,6 +111,17 @@
                 }
             }
         });
+    }
+
+    function strTimeDiff(oldtime) { // 单位 s
+        var sTotal = Math.round((Date.now() - oldtime) / 1000),
+                h = Math.floor(sTotal/3600),
+                m = Math.floor((sTotal%3600) / 60),
+                s = Math.floor(sTotal%3600%60);
+        h = h < 10 ? '0' + h : h;
+        m = m < 10 ? '0' + m : m;
+        s = s < 10 ? '0' + s : s;
+        return h + ':' + m + ':' + s;
     }
 </script>
 
