--- a/public/a/join.html
+++ b/public/a/join.html
@@ -43,8 +43,8 @@ $('#main-wrapper').find('form').ajaxForm({
         var ok = resObj['ok'],
                 msg = resObj['msg'];
         alert(msg);
-        if(ok){
-            loadFrame('#/view')
+        if (ok) {
+            loadFrame('#/view');
         }
 	}
 });
