--- a/public/a/reaction.html
+++ b/public/a/reaction.html
@@ -26,9 +26,9 @@
 
                 <tbody></tbody>
             </table>
-            <form action="/do/a/view" method="post">
+            <form  id="form-msg" action="/do/a/sendmsg" method="post">
                 请输入你想说的话
-                <input type="text" name="user" />
+                <input type="text" name="msg" />
                 <button type="submit" class="btn btn-default">发送信息</button>
             </form>
         </div>
@@ -64,6 +64,18 @@
     });
     getMsgList();
 
+
+    $('#form-msg').ajaxForm({
+        success: function(resObj) {
+            var ok = resObj['ok'],
+                    msg = resObj['msg'];
+            alert(msg);
+            if (ok) {
+                reloadFrame();
+            }
+        }
+    });
+
     function getAudienceList() {
         var $tbody = $table_audience.find('tbody');
         $tbody.empty();
@@ -97,7 +109,7 @@
             success: function(resObj) {
                 if (resObj['ok']) {
                     var msgList = resObj['msgList'];
-                    _.each(msg, function(msg) {
+                    _.each(msgList, function(msg) {
                         $([
                             '<tr>',
                                 '<td>' + msg.audienceName + '</td>',
